<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context=".FirstActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@color/vert"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:title="@string/toolbar"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text1"
        android:layout_marginTop="16dp" />

    <CheckBox
        android:id="@+id/choix1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choix1"
        android:layout_marginTop="8dp" />

    <CheckBox
        android:id="@+id/choix2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choix2"
        android:layout_marginTop="8dp" />

    <CheckBox
        android:id="@+id/choix3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choix3"
        android:layout_marginTop="8dp" />

    <CheckBox
        android:id="@+id/choix4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choix4"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text2"
        android:layout_marginTop="16dp" />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rd1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="oui" />

        <RadioButton
            android:id="@+id/rd2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="non" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2" />
    </LinearLayout>
</LinearLayout>