<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".SecondActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@color/vert"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:title="E-Certificates"/>


    <TextView
        android:id="@+id/reponses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reponses"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/titre1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre1"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/rep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rep2"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/titre2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre2"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/rep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rep2"
        android:layout_marginTop="8dp" />
</LinearLayout>